# gushen

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: agents.yaml  resources.yaml
data/samples/: top_amount_sample.csv
docs/: AI_AGENT_BASELINE.md  AI_INTERFACE_PLAN.md  AKSHARE_SOURCE_MAP.md  DATA_SOURCE_INTERFACE_INDEX.md  EXTERNAL_AGENT_BASELINE.md  GUIDED_FACTOR_BACKTEST_STOCKS.md  OPEN_SOURCE_BASELINE.md  RESOURCE_PLAN.md  RISK_POLICY.md  START_HERE.md  STRATEGY_TOP100_UNDER50.md  SYSTEM_BLUEPRINT.md  TOP100_2026-06-03_GUIDED_FACTOR_RUN.md  TRADINGAGENTS_ALIGNMENT_MATRIX.md  TRADINGAGENTS_LOCAL_PLAN.md  WEB_RESEARCH_POLICY.md  WONDERTRADER_TRIAL.md
src/gushen/: __init__.py  agent_schemas.py  agents.py  akshare_doctor.py  akshare_spot_daily_update.py  amount_profile_factor.py  amount_rank_factor.py  bulk_daily_download.py  cli.py  dashboard.py  data.py  data_quality.py  data_source_doctor.py  data_status_web.py  data_update_status.py  deep_analysis.py  domestic_network.py  fixed_universe_backtest.py  fund_flow_mapping.py  guided_factor_backtest.py  ifvg_strategy.py  incremental_daily_update.py  intraday_top_amount.py  llm_analysis.py  llm_config.py  llm_smoke.py  macro_regime.py  mature_backtest.py  mt180_factor_import.py  mt180_strategy_backtest.py  observability_app.py  research.py  scheduled_data_jobs.py  sector_mapping.py  sentiment_narrative.py  sliding_amount_strategy.py  storage.py  strategy_lab.py  technical_timing.py  top20_ma5_html_report.py  (+12 more)
src/gushen/wondertrader_trial/: __init__.py  bootstrap.py  run_trial.py  serve_snooper.py  strategy.py
tests/: test_agents.py  test_akshare_doctor.py  test_akshare_spot_daily_update.py  test_amount_profile_factor.py  test_amount_rank_factor.py  test_data.py  test_data_source_doctor.py  test_domestic_network.py  test_fixed_universe_backtest.py  test_fund_flow_mapping.py  test_guided_factor_backtest.py  test_ifvg_strategy.py  test_incremental_daily_update.py  test_intraday_top_amount.py  test_mature_backtest.py  test_mt180_factor_import.py  test_mt180_strategy_backtest.py  test_research_snapshot.py  test_sector_mapping.py  test_sliding_amount_strategy.py  test_storage.py  test_strategy_lab.py  test_technical_timing.py  test_top20_ma5_pullback_strategy.py  test_trade_calendar.py  test_tradingagents_dataset.py  test_tushare_daily_update.py  test_wondertrader_trial.py
