[project]
name = "gushen"
version = "0.1.0"
description = "A-share AI agent research and decision support system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "requests>=2.32",
  "rich>=13.7",
]

[project.optional-dependencies]
data = [
  "akshare>=1.14",
  "pandas>=2.2",
  "polars>=1.0",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
gushen-agents-demo = "gushen.cli:main"
gushen-akshare-doctor = "gushen.akshare_doctor:main"
gushen-yesterday-analysis = "gushen.research:main"
gushen-deep-analysis = "gushen.deep_analysis:main"
gushen-llm-smoke = "gushen.llm_smoke:main"
gushen-llm-analysis = "gushen.llm_analysis:main"
gushen-build-tradingagents-dataset = "gushen.tradingagents_dataset:main"
gushen-tradingagents-llm = "gushen.tradingagents_llm:main"
gushen-sentiment-narrative = "gushen.sentiment_narrative:main"
gushen-candidate-plans = "gushen.trade_recommendation:main"
gushen-dashboard = "gushen.dashboard:main"
gushen-macro-regime = "gushen.macro_regime:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
