[project]
name = "gushen"
version = "0.1.0"
description = "A-share AI agent research and decision support system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.58",
  "plotly>=6.0",
  "backtesting>=0.6.5",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "requests>=2.32",
  "rich>=13.7",
]

[project.optional-dependencies]
data = [
  "akshare>=1.14",
  "tushare>=1.4",
  "pandas>=2.2",
  "polars>=1.0",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
gushen-agents-demo = "gushen.cli:main"
gushen-akshare-doctor = "gushen.akshare_doctor:main"
gushen-yesterday-analysis = "gushen.research:main"
gushen-deep-analysis = "gushen.deep_analysis:main"
gushen-llm-smoke = "gushen.llm_smoke:main"
gushen-llm-analysis = "gushen.llm_analysis:main"
gushen-build-tradingagents-dataset = "gushen.tradingagents_dataset:main"
gushen-tradingagents-llm = "gushen.tradingagents_llm:main"
gushen-sentiment-narrative = "gushen.sentiment_narrative:main"
gushen-candidate-plans = "gushen.trade_recommendation:main"
gushen-technical-timing = "gushen.technical_timing:main"
gushen-fixed5-backtest = "gushen.fixed_universe_backtest:main"
gushen-strategy-lab = "gushen.strategy_lab:main"
gushen-dashboard = "gushen.dashboard:main"
gushen-macro-regime = "gushen.macro_regime:main"
gushen-mature-backtest = "gushen.mature_backtest:main"
gushen-observe-backtests = "gushen.observability_app:main"
gushen-alignment-doc = "gushen.tradingagents_alignment:write_alignment_doc"
gushen-data-source-doctor = "gushen.data_source_doctor:main"
gushen-sector-map = "gushen.sector_mapping:main"
gushen-fund-flow-map = "gushen.fund_flow_mapping:main"
gushen-intraday-top-amount = "gushen.intraday_top_amount:main"
gushen-guided-factor-backtest = "gushen.guided_factor_backtest:main"
gushen-ifvg-backtest = "gushen.ifvg_strategy:main"
gushen-amount-rank-factor = "gushen.amount_rank_factor:main"
gushen-amount-profile-factor = "gushen.amount_profile_factor:main"
gushen-sliding-amount-strategy = "gushen.sliding_amount_strategy:main"
gushen-tushare-daily-update = "gushen.tushare_daily_update:main"
gushen-akshare-spot-daily-update = "gushen.akshare_spot_daily_update:main"
gushen-top20-ma5-pullback = "gushen.top20_ma5_pullback_strategy:main"
gushen-top20-ma5-intraday = "gushen.top20_ma5_intraday_backtest:main"
gushen-scheduled-data-jobs = "gushen.scheduled_data_jobs:main"
gushen-data-status-web = "gushen.data_status_web:main"
gushen-incremental-daily-update = "gushen.incremental_daily_update:main"
gushen-mt180-factor-import = "gushen.mt180_factor_import:main"
gushen-mt180-strategy-backtest = "gushen.mt180_strategy_backtest:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
